--- a/src/styles/bar.css
+++ b/src/styles/bar.css
@@ -16,6 +16,10 @@
 .bar-section-left {
     float: left;
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: 10px;
 }
 
 .bar-section-right {
@@ -24,4 +28,65 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.bar-item-username {
+    color: black;
+    font-weight: 600;
+}
+
+.bar-item-userblock {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.bar-item-usericon {
+    height: 35px;
+    width: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    box-shadow: 0px 0px 13px 4px rgba(0, 0, 0, 0.2);
+}
+
+.bar-item-url {
+    color: #989898
+}
+
+.bar-itemicon {
+    width: 30px;
+    height: 30px;
+    display: flex!important;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.bar-itemicon.secondary {
+    color: #333;
+    border: 1px solid #81A2D3;
+    background-color: white;
+}
+
+.bar-itemicon.primary {
+    color:white;
+    background-color: #81A2D3;
+}
+
+.bar-itemicon-wrapper {
+    display: flex;
+    gap: 5px;
+}
+
+.bar-logo {
+    width: 40px;
+    height: 40px;
+}
+
+.bar-logo path {
+    fill: #989898;
 }
