--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -119,12 +119,26 @@
     margin: 0 auto;
     margin-top: 1em;
     margin-bottom: 1em;
-    width: 800px;
-    height: 800px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+
+@media only screen and (max-width: 1224px) {
+    .infoblock-centred {
+        width: 600px;
+        height: 600px;
+    }
+}
+
+@media only screen and (min-width: 1223px) {
+    .infoblock-centred {
+        width: 800px;
+        height: 800px;
+    }
+}
+
 
 .infoblock-outer {
     gap: 20px;
