--- a/src/styles/formcontact.css
+++ b/src/styles/formcontact.css
@@ -20,6 +20,8 @@
     width: 100%;
     top: 0;
     left: 0;
+    object-fit: cover;
+    height: 100%;
 }
 
 .form-text-left {
@@ -79,6 +81,9 @@
     height: 82%;
     margin: 0 auto;
     border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 1224px) {
@@ -92,6 +97,78 @@
     }
 
     .form-outer {
-        height: 400px;
+        height: 600px;
+    }
+}
+
+.form-factor {
+    width: 80%;
+    height: 80%;
+}
+
+.form-contact-top {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.form-label {
+    color: white;
+    margin-bottom: .25rem;
+    font-weight: 400;
+    font-family: 'SF Pro Display';
+}
+
+.form-input {
+    border: none;
+    background-color: white;
+    border-radius: 7px;
+    padding: 10px;
+    color: #333;
+    font-size: 17px;
+    font-weight: 500;
+    font-family: 'SF Pro Display';
+}
+
+.form-input.big {
+    width: 100%;
+    height: 150px;
+    resize: none;
+}
+
+.form-input:focus-visible {
+    outline: none;
+}
+
+.form-contact-bottom {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2em;
+    align-items: center;
+    gap: 10px;
+}
+
+.button {
+    color: #333;
+    background-color: white;
+    border-radius: 5px;
+    padding: 8px 15px 8px 15px;
+    font-weight: 500;
+    cursor: pointer;
+    user-select: none;
+}
+
+@media only screen and (max-width: 1224px) {
+    .form-contact-top {
+        flex-direction: column!important;
+    }
+
+    .form-input.big {
+        height: 100px!important;
+    }
+
+    .form-input {
+        width: 100%!important;
     }
 }
