--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,12 @@
+#finisher-canvas {
+    height: 590px;
+    width: 100%;
+    object-fit: cover;
+    background: linear-gradient(to bottom, rgb(80 105 143) 0%, rgb(255 255 255) 100%);
+    z-index: -2!important;
+}
+
 .slider-slide {
-    height: 400px;
     position: relative;
     overflow: hidden;
     border-radius: 5px;
@@ -8,8 +15,29 @@
     justify-content: center;
 }
 
+@media only screen and (max-width: 720px) {
+    .slider-slide {
+        height: 200px!important;
+    }
+}
+
+@media only screen and (max-width: 1280px) {
+    .slider-slide {
+        height: 350px;
+    }
+}
+
+@media only screen and (min-width: 1281px) {
+    .slider-slide {
+        height: 400px;
+    }
+}
+
+
 .slider-slide img {
+    width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .slider-image-black {
@@ -56,15 +84,26 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+@media only screen and (max-width: 720px) {
+    .outer-infoblocks {
+        grid-template-columns: repeat(2, 1fr)!important;
+    }
+
+    .outer-infoblocks .infoblock {
+        width: 130px!important;
+        height: 130px!important;
+    }
+}
+
 @media only screen and (max-width: 1224px) {
     .outer-infoblocks {
-        grid-template-columns: repeat(3, 1fr)!important;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media only screen and (min-width: 1223px) {
     .outer-infoblocks {
-        grid-template-columns: repeat(4, 1fr)!important;
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
@@ -116,6 +155,7 @@
 }
 
 .infoblock-centred {
+    width: 100%!important;
     margin: 0 auto;
     margin-top: 1em;
     margin-bottom: 1em;
@@ -124,20 +164,6 @@
     justify-content: center;
 }
 
-
-@media only screen and (max-width: 1224px) {
-    .infoblock-centred {
-        width: 600px;
-        height: 600px;
-    }
-}
-
-@media only screen and (min-width: 1223px) {
-    .infoblock-centred {
-        width: 800px;
-        height: 800px;
-    }
-}
 
 
 .infoblock-outer {
