--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -50,3 +50,9 @@
     margin-top: 3em;
     margin-bottom: 3em;
 }
+
+@media only screen and (max-width: 1224px) {
+    .about-graphic svg {
+        height: 100px!important;
+    }
+}
