--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -176,6 +176,10 @@
     .infoblock-outer {
         display: block;
     }
+
+    .infoblock-outer svg {
+        height: 300px!important;
+    }
 }
 
 @media only screen and (min-width: 1223px) {
