--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -250,3 +250,30 @@ b {
 .review-header-block {
     margin-bottom: 3em;
 }
+
+.image-gallery-outer {
+    width: 100%;
+    height: 100%;
+}
+
+.image-gallery-outer div {
+    background: #efefef;
+    border-radius: 1.3rem;
+}
+
+.react-photo-album--masonry .react-photo-album--column {
+    display: grid!important;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+}
+
+.image-gallery-outer div {
+    width: 100%;
+    height: 100%;
+}
+
+.image-gallery-outer div img {
+    object-fit: cover;
+    width: 100%!important;
+    height: 100%!important
+}
