--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -58,6 +58,7 @@
     color: white;
     font-weight: 600;
     font-size: 30px;
+    text-align: center;
     width: 100%;
     height: 100%;
     display: flex;
@@ -65,6 +66,13 @@
     justify-content: center;
     z-index: 2;
 }
+
+@media only screen and (max-width: 1223px) {
+    .slider-slide p {
+        font-size: 15px!important;
+    }
+}
+
 .swiper-button-next:after, .swiper-button-prev:after {
     font-family: swiper-icons;
     font-size: 17px;
