--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -177,6 +177,7 @@
 .infoblock-outer {
     gap: 20px;
     align-items: center;
+    margin-top: 1em;
 }
 
 
@@ -284,4 +285,18 @@ b {
     object-fit: cover;
     width: 100%!important;
     height: 100%!important
+}
+
+.iconText-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 55px;
+}
+
+.iconText-block i {
+    background: #81a2d3;
+    color: white;
+    padding: 20px;
+    border-radius: 12px;
 }
